# ThreadObservabilityPOC

./: .gitignore  README.md  repository.yaml
addons/thread-observability/app/: pyproject.toml
addons/thread-observability/app/src/thread_observability/: __init__.py  config.py  health.py  logging_setup.py  main.py  network_health.py  network_health_scoring.py
addons/thread-observability/app/src/thread_observability/api/: __init__.py  http_api.py  (+8 more)
addons/thread-observability/app/tests/: __init__.py  conftest.py  test_analyze_node.py  test_assessment_engine.py  test_assessment_http.py  test_assessment_schema.py  test_chat_http.py  test_chat_prompt_regression.py  test_counter_series.py  test_dashboard_http.py  test_device_discovery_diagnostics.py  test_direct_chat.py  test_health.py  test_mcp_resources.py  test_mcp_transport.py  test_network_health_builder.py  test_network_health_http.py  test_network_health_mcp.py  test_network_health_scoring.py  test_nodes.py  test_observer_events.py  test_otbr_rest.py  test_playbooks.py  test_reasoner.py  test_response_envelope.py  test_routing.py  test_signal_series.py  test_sqlite_store.py  test_supervisor_client.py  test_timeline.py  test_topology.py  test_topology_snapshot.py  test_triage.py
addons/thread-observability/app/tests/contract/: test_chat_contract.py  test_dev_status_contract.py  test_neighbors_contract.py  test_routes_contract.py
addons/thread-observability/app/tests/fixtures/: chat_prompt_regression.json  network_health_scoring_cases.json
addons/thread-observability/app/tests/integration/: test_pipeline_tick.py
(+79 files in other folders)
